--- a/templates/ads/new.html.twig
+++ b/templates/ads/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Ads{% endblock %}
+{% block title %}New Ad{% endblock %}
 
 {% block body %}
-    <h1>Create new Ad</h1>
+    <h1>Create new car</h1>
 
     {{ include('ads/_form.html.twig') }}
 
