--- a/templates/assets/bike-search.html.twig
+++ b/templates/assets/bike-search.html.twig
@@ -1,7 +1,6 @@
 
 <form action="/cardealer/public/index.php/bikes/search" method="GET">
   <div class="row my-2 py-2">
-
   <div class="col-sm-4">
      <div class="form-group">
       <select id="maker" class="form-control custom-select-sm" name="maker""
@@ -47,7 +46,7 @@
 
   <div class="col-sm-4">
      <div class="form-group">
-      <select id="model" class="form-control  custom-select-sm" name="model">
+      <select id="models" class="form-control  custom-select-sm" name="model">
               <option value="">Choose type</option>
               <option value="Scooter">Scooter</option>
               <option value="Naked">Naked</option>Chopper
