--- a/templates/bikes/new.html.twig
+++ b/templates/bikes/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Bikes{% endblock %}
+{% block title %}New Bike{% endblock %}
 
 {% block body %}
     <h1>Create new Bike</h1>
