--- a/templates/home/create.html.twig
+++ b/templates/home/create.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Create new ad{% endblock %}
 {% block stylesheets %}
 
 	    
 {% endblock %}
 {% block body %}
-  <h1>What you want to advertise on our portal?</h1>
+  <h1>What do you want to advertise on our portal?</h1>
   <style type="text/css">
 	.bigicons{
 		display: none;
