--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+ /* Set the size of the div element that contains the map */
+      #map {
+        height: 400px;  /* The height is 400 pixels */
+        width: 100%;  /* The width is the width of the web page */
+       }
+
 
 ul{list-style: none;}
 .levo{
