--- a/templates/ads/index.html (copy).twig
+++ b/templates/ads/index.html (copy).twig
@@ -3,31 +3,34 @@
 {% block title %}{% endblock %}
 
 {% block body %}
-        {% include './assets/search.html.twig' %}
-                <h3>We have {{count|length}} ads</h3>
-    <div class="row">
+	{% include './assets/search.html.twig' %}
+	<h3>We have
+		{{count|length}}
+		ads</h3>
+	<div class="row">
 
-        {% for ad in ads %}
-            <div class="col-3 my-2" style="border:1px solid cornsilk" >  
-                <div style="background: #f5f5f5" class="div">
-                    <p class="item-text">{{ad.maker ~ ' ' ~ ad.model}} <strong class="float-right">{{ad.price}}</strong></p>
-                    <a href="{{ path('ads_show', {'id': ad.id}) }}">
-                <img style="width: auto; height: 180px;" 
-    class="w-100" src="{% if ad.pictures[0] is defined %}{{ asset('images/')}}{{  ad.pictures[0] }}
-    {% else %}https://image.shutterstock.com/image-illustration/black-linear-photo-camera-logo-260nw-1412111903.jpg{% endif %}" alt="">
-            </a>
-                </div>
+		{% for ad in ads %}
+			<div class="col-3 my-2" style="border:1px solid cornsilk">
+				<div style="background: #f5f5f5" class="div">
+					<p class="item-text">{{ad.maker ~ ' ' ~ ad.model}}
+						<strong class="float-right">{{ad.price}}</strong>
+					</p>
+					<a href="{{ path('ads_show', {'id': ad.id}) }}">
+						<img style="width: auto; height: 180px;" class="w-100" src="{% if ad.pictures[0] is defined %}{{ asset('images/')}}{{ ad.pictures[0] }} {% else %}https://image.shutterstock.com/image-illustration/black-linear-photo-camera-logo-260nw-1412111903.jpg{% endif %}" alt="">
+					</a>
+				</div>
 
-            </div>
-        {% endfor %}
-    </div>
-                <div class="d-flex justify-content-center">
-        {% if count is defined and count|length > 12  %}
-            {% for i in 1..((count|length) / 12) | round(0, 'ceil') %}
-            {% if i >= 1 and count|length > 0 %}
-                <a class="btn btn-info px-3" href="{{ path('ads_index', {'pagination': i-1}) }}?{{ app.request.querystring }}">{{i}}</a>
-            {% endif %}
-            {% endfor %}
-        {% endif %}
-    </div>
+			</div>
+		{% endfor %}
+	</div>
+	<div class="d-flex justify-content-center">
+		{% if count is defined and count|length > 12  %}
+			{% for i in 1..((count|length) / 12) | round(0, 'ceil') %}
+				{% if i >= 1 and count|length > 0 %}
+					<a class="btn btn-info px-3" href="{{ path('ads_index', {'pagination': i-1}) }}?{{ app.request.querystring }}">{{i}}</a>
+				{% endif %}
+			{% endfor %}
+		{% endif %}
+	</div>
 {% endblock %}
+
