--- a/templates/ads/show.html.twig
+++ b/templates/ads/show.html.twig
@@ -16,6 +16,9 @@
 
 {% block body %}
 <div class="row searchitem-body">
+  <h3>My Google Maps Demo</h3>
+    <!--The div element for the map -->
+    <div id="map"></div>
     <div class="col-sm-8">
 
   <div>
