--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -127,7 +127,7 @@ function initMap() {
     * The callback parameter executes the initMap() function
     -->
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBg-u2EHcP9e1A_dg0zeRFkUNfmHLK2wXQ&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=Your_key&callback=initMap">
     </script>
 
 	</body>
